--- a/admin-content/finance.tex
+++ b/admin-content/finance.tex
@@ -27,3 +27,5 @@ The budget was created from the individual subsystem BOM. The BOMs for each subs
         \hline
     \end{tabularx}
 \end{table}
+
+\subsection{Total Cost}
