--- a/project-description/goals.tex
+++ b/project-description/goals.tex
@@ -1,4 +1,8 @@
 \subsection{Goals and Objectives}
-The primary goal of this project is to have a plant bed. This plant bed should be able to actively measure soil moisture content, soil OH group content, and soil acidity. Based on these measurements the plant bed will communicate with a web interface to serve this data to users as well as allow users to control the watering of their plant bed remotely. The plant bed will be powered via solar panels to charge batteries in order to provide a truly ``set it and forget it'' gardening experience.
+The primary goal of this project is to have a plant bed. This plant bed should be able to actively measure soil moisture content, soil OH group content, and soil acidity. 
+The plant bed is instead able to characterize soil with an accuracy of 75\%.
+Based on these measurements the plant bed prints out data via UART in comma-delimited format.
+The team originally planned for the plant bed to be powered by solar panels but had to make a pivot to
+to be powered by a DC barrel plug. Future iterations of this project should aim to include solar power.
 
 \paragraph{Function of the Project} Per the motivation of this project, the plant bed should serve to ease new gardeners into the hobby by removing the monotony of watering and allowing users to focus on researching the proper parameters for their plants.
