--- a/admin-content/milestones.tex
+++ b/admin-content/milestones.tex
@@ -34,3 +34,12 @@ Over the break, the team took time to reset before the big grind semseter.
 When we got back, the team met more frequently, 3 times a week to get a progress update. Below the cumulative flow diagram shows how the team buttoned down to accomplish a lot throughout the semester.
 The big items that the team had to conquer were testing and having to iterate over all the designs several times.
 For example, after breadboarding the sensing subsystem, the team decided to go ahead and order PCBs before coming to a realization the design would not work with the ADC.
+
+\begin{figure}[H]
+    \caption{Senior Design 2 Cumulative flow diagram}
+    \centering
+    \includegraphics[width=\textwidth]{images/Cumulative flow diagram-sd2.PNG}
+    \label{fig:cumulativeflow}
+\end{figure}
+
+From the diagram, there was much more consistent project by the team and some of that can be attributed to a greater level of organization through a greater dedication to Jira.
