--- a/project-description/specifications-requirements.tex
+++ b/project-description/specifications-requirements.tex
@@ -6,6 +6,7 @@ This project idea requires the integration of power, systems, computer, and opti
     \includegraphics[width=\textwidth]{images/Overall Block Diagram.png}
     \label{fig:overall-block}
 \end{figure}
+Blue is for Brendan, yellow is for Justin, purple for Scott and green for Nicholas.
 \paragraph{Control}
 The control subsystem is the brains of the entire operation. This subsystem has to accomplish four distinct tasks:
 \begin{enumerate}
