MCU testing software behavior

--- a/design-details/mcu.tex
+++ b/design-details/mcu.tex
@@ -66,7 +66,7 @@ The microcontroller does not support over-the-air updates.
 \paragraph{Networking} The system can connect to the user's 2.4 GHz-based wireless network. The network must adhere to the standards of 802.11b, g, or n. The system receives an IPv4 address assigned by network DHCP, or the user can statically assign a local IPv4 address.
 
 % Parameters for connection and how often it tries
-\subsection{Weather API Implementation}
+\paragraph{Weather API Implementation}
 As a stretch goal, the user will be able to configure the MCU in Station mode to allow it to connect to the user's home WLAN's SSID as a client. The user would still be able to access the MCU's web portal and see the same information as they had before. In addition, the MCU would be able to access an API to receive weather information and inform the user of recommended actions pertaining to their garden bed (e.g. if the system determines there will be freezing temperatures overnight, it may suggest to the user to cover the garden bed with a sheet or towel).
 
 \paragraph{Water Supervisor} This thread toggles the water on for 10 seconds every 24 hours.
