--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -1,71 +1,57 @@
 \subsection{Controller Subsystem Testing}
 \label{sec:controller_subsystem_testing}
-The MCU subsystem will undergo a littany of testing. The electrical
-characteristics, as well as hardware and software behavior will be tested to
+The MCU subsystem underwent a littany of testing. The electrical
+characteristics, as well as hardware and software behavior were tested to
 ensure a working product. Any use of "system" or "the system" in this section refers exclusively to, and the entirety of the MCU subsystem.
 
 % Electrical characteristics (to see what it can handle and what it uses)
 \subsubsection{Electrical Characteristics}
-The MCU subsystem shall adhere to the following electrical characteristics
+The MCU subsystem adheres to the following electrical characteristics
 related to power draw and voltage input in the following states. Unless noted,
 all voltages will be in direct current, and all conditions will be tested at
 room temperature (77 $\degree$F). 
 
-\paragraph{General Requirements} The system shall be able to accept a voltage
+\paragraph{General Requirements} The system is able to accept a voltage
 of -0.5 to 3.8 V into V\textsubscript{BAT}, -0.5 to 4.3 V into any digital
-IO-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
-into any analog-configured pin without damage. The system shall be able to
+I/O-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
+into any analog-configured pin without damage. The system is able to
 accept a current of 0 to 620 mA into any pin without damage. The system shall
 be able to regulate voltage going into V\textsubscript{BAT}, and provide 3.3 $\pm$ 0.3 V
-on its 3V3 rail to any components in the sensing
+on its 3.3 V rail to any components in the sensing
 subsystem that may require it.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The system was verified to be able to take between 0 V and 3.3 V into any digital I/O-configured pin. Because the CC3220MODAS has an integrated antenna, RF pins were not configured by the developers and did not need to be tested against this standard. The MCU was not configured for any analog I/O, and this requirement did not need to be tested against this standard. The system was able to accept 625 mA without damage during integration testing. The system was able to internally regulate voltage going into V\textsubscript{BAT} to 3.3 V, and the power subsystem successfully regulated the 3.3 V rail for any devices using it.
 
-\paragraph{Operating Temperature} The system shall be able to operate
+\paragraph{Operating Temperature} The system is able to operate
 nominally within the temperature range of 30 to 140 $\degree$F. Crystal
 oscillators shall fall within the thermal drift ratings provided in the
 MCU technical reference material.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The system was verified to operate at room temperature. Because the CC3220MODAS is a module component with encapsulated components, our team accepted Texas Instruments' operating temperatures specification listed in the CC3220MODAS datasheet as being sufficient to verify the system is able to operate under the test conditions. Texas Instruments lists the operating temperature of the CC3220MODAS as falling between -40 to 185 $\degree$F.
 
 \paragraph{Shutdown Power Draw} The system shall not draw more than 10
 $\upmu$A in shut down mode. The system shall not consume more than 100
 $\upmu$W in shut down mode.
-\subparagraph{Results} TBD.
-
-\paragraph{Critical Power Draw} The system shall not draw more than 1 mA in
-critical power mode. The system shall not consume more than 5 mW in critical
-power mode.
-\subparagraph{Results} TBD.
-
-\paragraph{Low Power Draw} The system shall not draw more than 100 mA while
-receiving or idling in low power mode, and shall not draw more than 250
-mA while transmitting in low power mode. The system shall not consume more
-than 500 mW while receiving or idling in low power mode, and shall not
-consume more than 1.25 W while transmitting in low power mode. The system
-shall be able to sufficiently power any components in the sensing subsystem in
-low power mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Because power is cut off to the system to initiate shutdown mode, no power is drawn from the system. This has been verified.
 
 \paragraph{Active Power Draw} The system shall not draw more than 150 mA while
 receiving or idling in active mode, and shall not draw more than 300
 mA while transmitting in active mode. The system shall not consume more
 than 750 mW while receiving or idling in active mode, and shall not
 consume more than 1.50 W while transmitting in active mode. The system
-shall be able to sufficiently power any components in the sensing subsystem in
+is able to sufficiently power any components in the sensing subsystem in
 active mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Although the exact metrics are unverified, the power subsystem is able to sufficiently power the components and subsystems during normal operation. Generally, the MCU has no bearing on whether devices are sufficiently powered, and the power draw by other devices is limited only by the power subsystem and the physical connections.
 
 \paragraph{Startup Power Draw} The system shall not draw more than 750 mA
 within the first 20 seconds of powering on or starting up the system. The
 system shall not consume more than 4.00 W within the first 20 seconds of
 powering on or starting up the system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The results of this test are unverified. However, it is unlikely that the system consumes more than $\frac{4.00 \mathrm{W}}{3.30 \mathrm{V}} = 1.21 \mathrm{A}$ of current on startup. Per the CC3220MODAS datasheet, peak calibration current at $V\textsubscript{BAT} = 3.3 \mathrm{V}$ is typically 450 mA.
 
-\paragraph{Solar Panels and Battery System} The system shall be able to
+\paragraph{Solar Panels and Battery System} The system is able to
 operate nominally solely powered off of the solar and battery subsystem
 detailed in \autoref{sec:power_subsystem}. The system shall not require any
 external power to operate in any modes (e.g. startup, active, etc.).
-\subparagraph{Results} TBD.
+\subparagraph{Results} This metric is moot, as our product moved to being an AC-line powered system. Whether our system is powered off of a solar and battery configuration, or an AC/DC converter configuration, it is still up to the power subsystem to regulate power and supply 3.3 V, 5 V, and 12 V with a sufficient amount of power available.
 
 % Hardware behavior (ability to set and use peripherals n stuff)
 \subsubsection{Hardware Behavior}
@@ -75,67 +61,56 @@ programming developed and test the below criteria will be intended to only
 perform testing on the below modules, and may or may not be present in the
 product software build.
 
-\paragraph{Upload Programming} The developers shall be able to successfully
+\paragraph{Upload Programming} The developers is able to successfully
 upload programming (software) that meets the requirements detailed in
-\autoref{sec:controller_subsystem}. The developers shall be able to
+\autoref{sec:controller_subsystem}. The developers is able to
 successfully upload programming that allows and/or performs unit testing
 (as detailed in this section, \autoref{sec:controller_subsystem_testing}).
 Programming uploaded to the MCU shall execute either upon powering the
 system, upon command, or when executing an ISR to start up the system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The developers were able to flash programming to CC3220MODAS module on the microcontroller PCB v2.0 via TI Code Composer Studio and TI UniFlash. This programming could either be emulated via JTAG on the XDS110 Debugger, or fully flashed into memory and ran by the MCU itself. 
 
-\paragraph{I2C} The developers shall be able to initialize I2C. I2C shall
+\paragraph{I2C} The developers is able to initialize I2C. I2C shall
 function nominally if used for communication with any other modules in the
 overall garden bed system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} I2C was successfully initialized. The addresses of the components used (ADC, charge controller) were verified to correspond to the correct component, and the devices responded to a general call. The ADC on the sensing subsystem successfully communicated correct values back to the MCU via the I2C bus.
 
-\paragraph{Onboard LEDs} The system shall be able to make use of its onboard
+\paragraph{Onboard LEDs} The system is able to make use of its onboard
 LEDs for notifying the user or developers of system states according to the specification in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Watchdog Timer} The developers shall be able to initialize the
-watchdog timer. The watchdog timer shall behave according to the specification in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
+\subparagraph{Results} While the LED configuration is not consistent with \autoref{sec:controller_subsystem}, the developer was able to configure the LEDs to indicate which actions the product is performing. The green LED is solidly on while the system is on and executing code. The red LED is on while the system is first initializing, and turns off when it's done. The yellow LED comes on while the system is performing spectral measurements, and turns off while it's not. No LEDs are illuminated while the system is off.
 
 \paragraph{WiFi Module} The WiFi module shall conform to the 802.11b/g/n
-standards. The developers shall be able to configure the WiFi
+standards. The developers is able to configure the WiFi
 module to support 802.11b, 802.11g, or 802.11n in WiFi station mode.  The 
-developers shall be able to configure the WiFi module to support 802.11b, or
+developers is able to configure the WiFi module to support 802.11b, or
 802.11g in WiFi Direct mode. The WiFi module shall allow the system to
 connect to either an open WLAN, or a WLAN secured by WPA2 (Personal or
 Enterprise). While
-connected, the WiFi module shall be capable of sending and receiving
+connected, the WiFi module is capable of sending and receiving
 data at speeds of at least 10 kbps at least 80\% of the time.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The NWP is able to broadcast in SSID in AP mode, and able to connect to a network in station mode. The NWP can be configured via SmartConfig or by accessing the WLAN's gateway while in AP mode. The integrated HTTP server is able to host an HTML page of our choice. Network speeds are unverified, as the wireless aspect of the project was not completely implemented.
 
-\paragraph{GPIO} The developers shall be able to configure the GPIO pins to
+\paragraph{GPIO} The developers is able to configure the GPIO pins to
 the configurations available as described by technical reference documentation.
-The developers shall be able to set the state of the desired GPIO pins to
+The developers is able to set the state of the desired GPIO pins to
 the configurations available as described by technical reference documentation.
-\subparagraph{Results} The developers are able to configure GPIO pins to the configurations available as described by technical reference documentation via the Texas Instruments \href{https://www.ti.com/tool/SYSCONFIG}{SYSCONFIG} system configuration tool.
+\subparagraph{Results} The developers are able to configure GPIO pins to the configurations available as described by technical reference documentation via the Texas Instruments \href{https://www.ti.com/tool/SYSCONFIG}{SYSCONFIG} system configuration tool. GPIO actions were tested verified to work, with the exception of GPIO \texttt{BIN1}. This GPIO was able to be initialized and toggled, but it did not go to the full 3.3 V required of digital I/O.
 
-\paragraph{Interrupts/ISRs} The developers shall be able to configure
+\paragraph{Interrupts/ISRs} The developers is able to configure
 the interrupts available on the MCU as described by technical reference
 documentation to trigger an ISR of their choice. ISRs shall run within 1 second
 of triggering the interrupt linked to the specific ISR. An empty ISR shall
 return the MCU to its previous state before the interrupt (i.e. clear any
 flags and return any registers to their previous state).
-\subparagraph{Results} TBD.
+\subparagraph{Results} The developer is able to configure and trigger interrupts---though, interrupts ended up not being used.
 
-\paragraph{ADC} The developers shall be able to configure the ADC on the MCU
-to adhere to the parameters described in the technical reference documentation.
-The ADC shall be able to measure signals with a voltage of between 0 and 1.8 V.
-The ADC shall be able to accurately measure a voltage level down to a
-resolution of $\leq$1 mV. The ADC shall be able to measure at a sampling rate
+\paragraph{ADC} The developers is able to configure the ADC on the to adhere to the parameters described in the technical reference documentation.
+The ADC is able to measure signals with a voltage of between 0 and 3.3 V.
+The ADC is able to accurately measure a voltage level down to a
+resolution of $\leq$1 mV. The ADC is able to measure at a sampling rate
 of $\geq$50 kilosamples per second per channel. The ADC shall support
-conversion on up to 4 channels. The ADC shall support the ablility to timestamp
-samples with the clock mentioned by the technical reference documentation.
-\subparagraph{Results} TBD.
-
-\paragraph{Reset Button} The reset button shall be able to "power cycle" the system. The reset button shall not erase
-any programming uploaded to the MCU. The reset button shall not keep the
-system from starting for more than 1 second after the button has been released.
-\subparagraph{Results} The reset button "power cycles" the system, does not erase any programming uploaded to the MCU, and does not keep the system from starting for more than 1 second after the button has been released.
+conversion on up to 2 channels. 
+\subparagraph{Results} The external ADC was able to be configured to high-precision mode to take 16-bit measurements from both channels. The ADC is able to sucessfully measure signals between 0 and 3.3 V. The ADC has a resolution of as little as 50 $\upmu$V. The ADC is able to measure at 140ksps in normal operating mode---since high-precision mode was used, the ADC is only able to measure at 8750 sps. While this does not meet our testing requirements, this is plenty enough for our needs, as the motor does not step fast enough to saturate our 8750 sps. The ADC is verified to support 2 channels.
 
 \paragraph{Startup} The system shall not take longer than 10 seconds to begin
 its programming upon sufficient power delivery to the MCU as described by
@@ -144,33 +119,30 @@ the programmed startup sequence unless interrupted to do so, or if given
 sufficient power as described by the by the technical reference documentation
 after being shut down.
 \subparagraph{Results} The system does not take longer than 10 seconds to begin
-its programming upon sufficient power delivery to the MCU. The system does not perform
+its programming upon sufficient power delivery to the MCU (it takes approximately 2 seconds). The system does not perform
 the programmed startup sequence unless the parameters described above are met.
 
 \paragraph{Processor} The central processor of the MCU shall maintain at
 least a 20 MHz clock speed while in active mode.
-\subparagraph{Results} The central processor of the MCU is able to maintain an 80 MHz clock speed while in active mode.
+\subparagraph{Results} The central processor of the MCU maintains an 80 MHz clock speed while in active mode.
 
 \paragraph{Memory} The programming uploaded to the MCU shall not take up
 more than 64 KB of space in memory.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Due to the large hardware abstraction layer and the large amount of stack space allocated, our product fails this test. The program for the system takes up 126 KB of space in memory. However if we only consider heap space allocation for this program, then our system passes this test. 32 KB of memory are allocated for the program heap, and only 28 KB were allocated by the developers for use.
 
 % Software behavior (actual program)
-\subsubsection{Software Behavior} The MCU subsystem shall pass the following
-tests related to use of the MCU to support application of the product. The
-programming developed and test the below criteria is intended to be the
-product software build.
+\subsubsection{Software Behavior} The MCU subsystem shall pass the following tests related to use of the MCU to support application of the product. The programming developed and test the below criteria is intended to be the product software build.
 
-\paragraph{Startup} The microcontroller shall behave according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
-\subparagraph{Results} TBD.
+\paragraph{Startup} The microcontroller behaves according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
+\subparagraph{Results} Upon startup, the microcontroller allocates heap space for our pthreads and successfully initializes them. While the state of the LEDs do not reflect what we originally had in mind, the LEDs are able help us differentiate when the system is on or off, when the system is initializing, and when the system is reading measurements.
 
-\paragraph{Shutdown} The microcontroller shall behave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
-\subparagraph{Results} TBD.
+\paragraph{Shutdown} The microcontroller ishave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
+\subparagraph{Results} While there is no longer a formal shutdown interrupt and process, the microcontroller safely shuts down without harm to the user, environment, or the system itself. The microcontroller is successfully able to start up the next time as well.
 
-\paragraph{Reset} The microcontroller shall behave according to the specifications on reset in \autoref{sec:controller_subsystem} during its reset sequence.
-\subparagraph{Results} TBD.
+\paragraph{Reset} The microcontroller ishave according to the specifications on reset in \autoref{sec:controller_subsystem} during its reset sequence.
+\subparagraph{Results} The reset sequence was revised to be a simple power cycle of the system. As the system has been verified to startup and shutdown successfully, this metric is verified as well.
 
-\paragraph{Networking} The system shall be able to connect to the user's WLAN if it meets the following standards:
+\paragraph{Networking} The system is able to connect to the user's WLAN if it meets the following standards:
 \begin{itemize}
     \item A 2.4 GHz-based wireless network
     \item Contains no security or is secured with WPA2 (Personal or Enterprise)
@@ -181,16 +153,4 @@ product software build.
     \item Provides DNS to LAN devices
     \item Able to resolve and successfully connect to \texttt{8.8.8.8} and \texttt{google.com} within 5 seconds
 \end{itemize}
-\subparagraph{Results} TBD.
-
-\paragraph{AWS} The microcontroller shall behave according to the specifications on connecting to and communicating with AWS in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Sockets} The microcontroller shall behave according to the specifications on sockets in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Solar and Battery} The system shall monitor and update the solar array current and voltage output values at least every 10 seconds. The system shall behave according to the specifications on power modes and battery percentages in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Sensing} The system shall monitor and perform analog-to-digital conversion on the spectroscopic sensor values at least every 10 seconds while not in shutdown or critical power mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Unfortunately, not all of these metrics were able to be verified. The system is able to connect to a 2.4 GHz-based wireless network conforming to 802.11b, g, or n that uses NAT, and is able to receive an address via DHCP or static assignment---however, the requirement to connect to the internet and resolve an address was not tested due to the project's shifting goals. Signal strength of $\geq$-70 dBm was unable to be verified as well.
